examples/test/testpolicy8091.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8091
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key32: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value41
          key49: value10
      podSelector:
        matchLabels:
          key28: value16
          key25: value26
